--- a/S12.04-Solution-ResourceQualifiers/sunshinewear/build.gradle
+++ b/S12.04-Solution-ResourceQualifiers/sunshinewear/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "25.0.2"
 
     defaultConfig {
-        applicationId "com.hongtao.sunshinewear"
+        applicationId "com.example.android.sunshine"
         minSdkVersion 21
         targetSdkVersion 25
         versionCode 1
@@ -18,6 +18,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
