--- a/WatchFace/Wearable/src/main/AndroidManifest.xml
+++ b/WatchFace/Wearable/src/main/AndroidManifest.xml
@@ -38,6 +38,9 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <!-- permission to receive complication data and open the provider chooser -->
+    <uses-permission android:name="com.google.android.wearable.permission.RECEIVE_COMPLICATION_DATA"/>
+
 
     <application
         android:allowBackup="true"
