--- a/S12.04-Solution-ResourceQualifiers/app/build.gradle
+++ b/S12.04-Solution-ResourceQualifiers/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 
     compile 'com.android.support:recyclerview-v7:25.0.1'
     compile 'com.android.support:preference-v7:25.0.1'
+    compile 'com.google.android.gms:play-services-wearable:10.0.1'
 
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta3'
 
